# rrst

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  config.c  config.h  config.rs  control.h  control_qcomdbg.c  control_rtsdtr.c  find_rust_libs.sh  install.sh  meson.build  pts.rs  rrst.c  rrst.conf  rrst.h  rrst.service  ttypersist.c  ttypersist.h
config/: axolotl.ini  pmos.ini  rb2.ini  rb3.ini
